Create main and style

--- a/index.html
+++ b/index.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>My Portfolio - Projects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body></body>
+    <header>
+        <h1>wazzAPP-egz</h1>
+    </header>
+    <nav>
+        <a href="#HealthyLearning">Healthy learning</a>
+        <a href="#Stress">Why stress is bad for you?</a>
+    </nav>
+
+    <main>
+        <section id="HealthyLearning">
+            <h3>Healthy Learning</h3>
+            <div class="card-container">
+                <div class="card">
+                    <img src="https://placecats.com/bella/280/160" alt="Coding">
+                    <div class="card-content">
+                        <h3>Coding Projects</h3>
+                        <p>I love creating web apps and experimenting with new technologies and frameworks.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://placecats.com/poppy/280/160?position=top" alt="Guitar">
+                    <div class="card-content">
+                        <h3>HomeLabing</h3>
+                        <p>Some older computers and used servers don't have to be thrown into trash.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://placecats.com/millie_neo/280/160" alt="Hiking">
+                    <div class="card-content">
+                        <h3>Hiking</h3>
+                        <p>Spending time just walking with some music always helps me clear my mind.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="Stress">
+            <h3>Why stress is bad for you</h3>
+            <div class="card-container">
+                <div class="card">
+                    <img src="https://placecats.com/bella/280/160" alt="Coding">
+                    <div class="card-content">
+                        <h3>Coding Projects</h3>
+                        <p>I love creating web apps and experimenting with new technologies and frameworks.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://placecats.com/poppy/280/160?position=top" alt="Guitar">
+                    <div class="card-content">
+                        <h3>HomeLabing</h3>
+                        <p>Some older computers and used servers don't have to be thrown into trash.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://placecats.com/millie_neo/280/160" alt="Hiking">
+                    <div class="card-content">
+                        <h3>Hiking</h3>
+                        <p>Spending time just walking with some music always helps me clear my mind.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        &copy; 2025 My Portfolio
+    </footer>
+
 </body>
+
 </html>
