--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>My Portfolio - Projects</title>
+    <title>wazzApp - teaches how to learn</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/fav.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -80,8 +84,23 @@
         </section>
     </main>
 
-    <footer>d
-        &copy; 2025 My Portfolio
+    <footer>
+        <div class="footerTop">
+            <div class="footerSection">
+                <img src="images/logo.svg" alt="logo" class="logo">
+
+            </div>
+            <div class="footerSection">
+                <a href="#HealthyLearning">Healthy learning</a>
+                <a href="#About">About us</a>
+                <a href="#Stress">Why stress is bad for you?</a>
+            </div>
+            <div class="footerSection">
+                <a href="mailto:filip.maciejewski@uczen.zsk.poznan.pl">filip.maciejewski@uczen.zsk.poznan.pl</a>
+                <a href="tel:+48795316931">+48 795 316 931</a>
+            </div>
+        </div>
+        <p>&copy;2025 wazzAPP-egz</p>
     </footer>
 
     <script>
