--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                 <a href="#Stress">Why stress is bad for you?</a>
             </div>
             <div class="footerSection">
-                <a href="mailto:filip.maciejewski@uczen.zsk.poznan.pl">filip.maciejewski@uczen.zsk.poznan.pl</a>
-                <a href="tel:+48795316931">+48 795 316 931</a>
+                <a href="mailto:mail@gmail.com">mail@gmail.com</a>
+                <a href="tel:+48795316931">+48 123 456 789</a>
             </div>
         </div>
-        <p>&copy;2025 wazzAPP-egz</p>
+        <a href="#">&copy;2025 wazzAPP-egz</a>
     </footer>
 
     <script>
