changed font colors to darker ones in the header and footer sections

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header id="header" class="show">
         <div class="half">
-            <h1>wazzAPP-egz</h1>
+            <h1>WazzAPP-egz</h1>
         </div>
         <div class="half color">
             <nav>
