--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         </div>
         <div class="half color">
             <nav>
-                <a href="#HealthyLearning">Zdrowe leczenie</a>
                 <a href="#About">O nas</a>
+                <a href="#HealthyLearning">Zdrowa nauka</a>
+                <a href="#StudyMethods">Efektywne metody nauki</a>
                 <a href="#Stress">Stres</a>
             </nav>
         </div>
@@ -37,85 +38,9 @@
                 </div>
             </div>
         </section>
-        <section id="HealthyLearning">
-            <h3>Zdrowa nauka</h3>
-            <div class="card-container">
-                <div class="card">
-                    <img src="https://placecats.com/bella/280/160" alt="Coding">
-                    <div class="card-content">
-                        <h3>Ucz się w rytmie swojego mózgu – stosuj przerwy</h3>
-                        <ul>
-                            <li>🧠 Mózg potrzebuje regeneracji, żeby efektywnie zapamiętywać.</li>
-                            <li>📌 Stosuj metodę Pomodoro (25 min nauki + 5 min przerwy) lub dostosuj bloki do siebie.</li>
-                            <li>🚶 W przerwie wstań, poruszaj się, przewietrz pokój – to resetuje koncentrację.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="https://placecats.com/poppy/280/160?position=top" alt="Guitar">
-                    <div class="card-content">
-                        <h3>Dbaj o ciało – ono też się uczy</h3>
-                        <ul>
-                            <li>💤 Śpij min. 7–8 godzin – sen utrwala wiedzę.</li>
-                            <li>🥗 Jedz regularnie, unikaj słodyczy i energetyków – powodują zjazd energii.</li>
-                            <li>🧘‍♂️ Dodaj ruch: choćby 10 minut spaceru czy rozciągania dziennie.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="https://placecats.com/millie_neo/280/160" alt="Hiking">
-                    <div class="card-content">
-                        <h3>Nie ucz się w stresie – organizuj naukę z głową</h3>
-                        <ul>
-                            <li>📅 Planuj z wyprzedzeniem, rozłóż materiał na mniejsze części.</li>
-                            <li>🚫 Nie zostawiaj wszystkiego na ostatnią chwilę – to najprostsza droga do przemęczenia i lęku.</li>
-                            <li>❤️ Przypominaj sobie, że nie jesteś sam – szukaj wsparcia, jeśli czujesz presję.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="Stress">
-            <h3>Stres</h3>
-            <div class="card-container">
-                <div class="card">
-                    <img src="https://placecats.com/bella/280/160" alt="Coding">
-                    <div class="card-content">
-                        <h3>Dobre efekty krótkotrwałego stresu</h3>
-                        <ul>
-                            <li>📈 Stres wywołuje reakcję „walcz albo uciekaj”, która zwiększa czujność, koncentrację i motywację. Dzięki temu szybciej podejmujemy decyzje, lepiej zapamiętujemy i mamy więcej energii do działania.</li>
-                            <li>🎯 Umiarkowany stres motywuje do przygotowań, np. przed egzaminem czy prezentacją. Dzięki niemu traktujemy sprawy poważnie, planujemy i wkładamy więcej wysiłku w to, co robimy.</li>
-                            <li>🧠 Kontakt z wyzwaniami i stresem uczy nas radzenia sobie z trudnymi sytuacjami. Każde takie doświadczenie może wzmacniać naszą odporność psychiczną i pewność siebie w przyszłości.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="https://placecats.com/poppy/280/160?position=top" alt="Guitar">
-                    <div class="card-content">
-                        <h3>Złe efekty długiego stresu</h3>
-                        <ul>
-                            <li>🧠 Przewlekły stres utrudnia skupienie się i osłabia zdolność zapamiętywania informacji, co utrudnia efektywną naukę.</li>
-                            <li>🔥 Ciągła presja i zmęczenie prowadzą do wypalenia – czujesz się pusty, bez sił i nie masz ochoty dalej się uczyć, nawet jeśli egzamin jest blisko.</li>
-                            <li>🤕 Stres może powodować:
-                                <ul>
-                                    <li>bóle głowy i brzucha,</li>
-                                    <li>napięcie mięśni,</li>
-                                    <li>problemy ze snem,</li>
-                                    <li>obniżoną odporność (częstsze choroby).</li>
-                                </ul>
-                            </li>
-                            <li>😟 Przedłużający się stres może wywołać:
-                                <ul>
-                                    <li>lęk,</li>
-                                    <li>stany depresyjne,</li>
-                                    <li>rozdrażnienie, a nawet ataki paniki.</li>                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <a href="sites/healthy_learning.html" id="HealthyLearning"><h3>Zdrowa nauka</h3></a>
+        <a href="sites/study_methods.html" id="StudyMethods"><h3>Efektywne metody nauki</h3></a>
+        <a href="sites/stress.html" id="Stress"><h3>Stres</h3></a>
     </main>
 
     <footer>
@@ -125,9 +50,10 @@
 
             </div>
             <div class="footerSection">
-                <a href="#HealthyLearning">Healthy learning</a>
-                <a href="#About">About us</a>
-                <a href="#Stress">Why stress is bad for you?</a>
+                <a href="#About">O nas</a>
+                <a href="sites/healthy_learning.html">Zdrowa nauka</a>
+                <a href="sites/study_methods.html">Efektowne metody nauki</a>
+                <a href="sites/stress.html">Stres</a>
             </div>
             <div class="footerSection">
                 <a href="mailto:mail@gmail.com">mail@gmail.com</a>
