--- a/sites/healthy_learning.html
+++ b/sites/healthy_learning.html
@@ -16,7 +16,9 @@
         </div>
         <div class="half color">
             <nav>
-                <a href="#HealthyLearning">Metody zdrowej nauki</a>
+                <a href="../index.html">O nas</a>
+                <a href="sites/study_methods.html">Efektywne metody nauki</a>
+                <a href="sites/stress.html">Stres</a>
             </nav>
         </div>
     </header>
