--- a/sites/stress.html
+++ b/sites/stress.html
@@ -16,8 +16,9 @@
         </div>
         <div class="half color">
             <nav>
-                <a href="#Stresseffects">Działanie stresu</a>
-                <a href="#StressManage  ment">Radzenie sobie ze stresem</a>
+                <a href="../index.html">O nas</a>
+                <a href="sites/healthy_learning.html">Zdrowa nauka</a>
+                <a href="sites/study_methods.html">Efektywne metody nauki</a>
             </nav>
         </div>
     </header>
