--- a/sites/study_methods.html
+++ b/sites/study_methods.html
@@ -20,7 +20,9 @@
         </div>
         <div class="half color">
             <nav>
-                <a href="#StudyMethods">Metody dobrej nauki</a>
+                <a href="../index.html">O nas</a>
+                <a href="sites/healthy_learning.html">Zdrowa nauka</a>
+                <a href="sites/stress.html">Stres</a>
             </nav>
         </div>
     </header>
