--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         </div>
         <div class="half color">
             <nav>
-                <a href="#About">O nas</a>
-                <a href="#HealthyLearning">Zdrowa nauka</a>
-                <a href="#StudyMethods">Efektywne metody nauki</a>
-                <a href="#Stress">Stres</a>
+                <a href="sites/healthy_learning.html">Zdrowa nauka</a>
+                <a href="sites/study_methods.html">Efektywne metody nauki</a>
+                <a href="sites/stress.html">Stres</a>
             </nav>
         </div>
     </header>
