--- a/sites/healthy_learning.html
+++ b/sites/healthy_learning.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>wazzApp - teaches how to learn</title>
+    <title>wazzApp - healthy learning</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" type="image/x-icon" href="../images/fav.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,13 +17,12 @@
         <div class="half color">
             <nav>
                 <a href="../index.html">O nas</a>
-                <a href="sites/study_methods.html">Efektywne metody nauki</a>
-                <a href="sites/stress.html">Stres</a>
+                <a href="study_methods.html">Efektywne metody nauki</a>
+                <a href="stress.html">Stres</a>
             </nav>
         </div>
     </header>
     <main id="HealthyLearning">
-            <h3>Zdrowa nauka</h3>
             <div class="card-container">
                 <div class="card">
                     <img src="https://placecats.com/bella/280/160" alt="Coding">
