--- a/sites/study_methods.html
+++ b/sites/study_methods.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>wazzApp - teaches how to learn</title>
+    <title>wazzApp - study methods</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" type="image/x-icon" href="../images/fav.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,12 +21,11 @@
         <div class="half color">
             <nav>
                 <a href="../index.html">O nas</a>
-                <a href="sites/healthy_learning.html">Zdrowa nauka</a>
-                <a href="sites/stress.html">Stres</a>
+                <a href="healthy_learning.html">Zdrowa nauka</a>
+                <a href="stress.html">Stres</a>
             </nav>
         </div>
     </header>
-    <h3>Efektywne metody nauki</h3>
     <main id="StudyMethods">
         <div class="card-container">
             <div class="card">
