--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="About">
             <div class="card-container">
                 <div class="card">
-                    <img src="https://placecats.com/bella/280/160" alt="Coding">
+                    <img src="images/logo.png" alt="Coding">
                     <div class="card-content">
                         <h3>O nas</h3>
                         <p>WazzApp-egz to inicjatywa edukacyjna wspierająca uczniów przygotowujących się do egzaminów zawodowych. Uczymy, jak uczyć się efektywnie i zdrowo – bez wypalenia, stresu i przeciążenia. Pokazujemy metody, które pomagają osiągać lepsze wyniki, dbając jednocześnie o psychiczne i fizyczne zdrowie. <br>Naszą misją jest nie tylko wspierać w nauce, ale też zapobiegać problemom, które często towarzyszą intensywnemu przygotowaniu do egzaminów: zmęczeniu, lękowi, spadkom motywacji i zdrowotnym skutkom siedzącego trybu życia.</p>
