--- a/sites/healthy_learning.html
+++ b/sites/healthy_learning.html
@@ -25,7 +25,7 @@
     <main id="HealthyLearning">
             <div class="card-container">
                 <div class="card">
-                    <img src="https://placecats.com/bella/280/160" alt="Coding">
+                    <img src="../images/studyMethods/brain.png" alt="brain">
                     <div class="card-content">
                         <h3>Ucz się w rytmie swojego mózgu – stosuj przerwy</h3>
                         <ul>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/poppy/280/160?position=top" alt="Guitar">
+                    <img src="../images/stress/bedroom.jpg" alt="bedroom">
                     <div class="card-content">
                         <h3>Dbaj o ciało – ono też się uczy</h3>
                         <ul>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/millie_neo/280/160" alt="Hiking">
+                    <img src="../images/healthyLearning/tea.jpg" alt="tea">
                     <div class="card-content">
                         <h3>Nie ucz się w stresie – organizuj naukę z głową</h3>
                         <ul>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/nina/280/160" alt="Routine">
+                    <img src="../images/stress/calendar.jpg" alt="Routine">
                     <div class="card-content">
                         <h3>Ucz się regularnie – stwórz rutynę</h3>
                         <ul>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/daisy/280/160" alt="Mindset">
+                    <img src="../images/healthyLearning/hand.jpg" alt="Mindset">
                     <div class="card-content">
                         <h3>Buduj pozytywne nastawienie do nauki</h3>
                         <ul>
