--- a/sites/stress.html
+++ b/sites/stress.html
@@ -23,9 +23,9 @@
         </div>
     </header>
     <main id="Stress">
-            <div class="card-container" id="StressEffects">
+            <div class="card-container" id="shortTermStress">
                 <div class="card">
-                    <img src="https://placecats.com/bella/280/160" alt="Coding">
+                    <img src="../images//stress/athlete.jpg" alt="shortStress">
                     <div class="card-content">
                         <h3>Dobre efekty krótkotrwałego stresu</h3>
                         <ul>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/poppy/280/160?position=top" alt="Guitar">
+                    <img src="../images/stress/head.jpg" alt="longTermStress">
                     <div class="card-content">
                         <h3>Złe efekty długiego stresu</h3>
                         <ul>
@@ -63,7 +63,7 @@
             <h3>Jak radzić sobie ze stresem</h3>
             <div class="card-container" id="StressManagement">
                 <div class="card">
-                    <img src="https://placecats.com/max/280/160" alt="Meditation">
+                    <img src="../images/stress/buddah.jpg" alt="Meditation">
                     <div class="card-content">
                         <h3>🧘‍♀️ Techniki relaksacyjne</h3>
                         <ul>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/loki/280/160" alt="Workout">
+                    <img src="../images/stress/weight.jpg" alt="Workout">
                     <div class="card-content">
                         <h3>🏋️‍♂️ Aktywność fizyczna</h3>
                         <ul>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/olive/280/160" alt="Support">
+                    <img src="../images/studyMethods/chat.png" alt="Support">
                     <div class="card-content">
                         <h3>🗣️ Rozmowa z kimś</h3>
                         <ul>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/neo/280/160" alt="Plan">
+                    <img src="../images/stress/calendar.jpg" alt="Plan">
                     <div class="card-content">
                         <h3>📝 Planowanie i organizacja</h3>
                         <ul>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://placecats.com/jasper/280/160" alt="Sleep">
+                    <img src="../images/stress/bedroom.jpg" alt="Sleep">
                     <div class="card-content">
                         <h3>😴 Sen i regeneracja</h3>
                         <ul>
