--- a/sites/study_methods.html
+++ b/sites/study_methods.html
@@ -29,7 +29,7 @@
     <main id="StudyMethods">
         <div class="card-container">
             <div class="card">
-                <img src="https://placecats.com/milo/280/160" alt="Pomodoro">
+                <img src="../images/studyMethods/tomato.png" alt="Pomodoro">
                 <div class="card-content">
                     <h3>🍅 Technika Pomodoro</h3>
                     <ul>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://placecats.com/luna/280/160" alt="Active Recall">
+                <img src="../images/studyMethods/brain.png" alt="Active Recall">
                 <div class="card-content">
                     <h3>🧠 Aktywne przypominanie (Active Recall)</h3>
                     <ul>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://placecats.com/leo/280/160" alt="Spacing">
+                <img src="../images/studyMethods/clock.png" alt="Spacing">
                 <div class="card-content">
                     <h3>📆 Rozłożenie nauki w czasie (Spaced Repetition)</h3>
                     <ul>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://placecats.com/nova/280/160" alt="Feynman">
+                <img src="../images/studyMethods/chat.png" alt="Feynman">
                 <div class="card-content">
                     <h3>🗯️ Metoda Feynmana</h3>
                     <ul>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://placecats.com/oscar/280/160" alt="Environment">
+                <img src="../images/studyMethods/sign.png" alt="Environment">
                 <div class="card-content">
                     <h3>🌍 Odpowiednie środowisko nauki</h3>
                     <ul>
