--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/fav.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +33,22 @@
                     <img src="images/logo.png" alt="Coding">
                     <div class="card-content">
                         <h3>O nas</h3>
-                        <p>WazzApp-egz to inicjatywa edukacyjna wspierająca uczniów przygotowujących się do egzaminów zawodowych. Uczymy, jak uczyć się efektywnie i zdrowo – bez wypalenia, stresu i przeciążenia. Pokazujemy metody, które pomagają osiągać lepsze wyniki, dbając jednocześnie o psychiczne i fizyczne zdrowie. <br>Naszą misją jest nie tylko wspierać w nauce, ale też zapobiegać problemom, które często towarzyszą intensywnemu przygotowaniu do egzaminów: zmęczeniu, lękowi, spadkom motywacji i zdrowotnym skutkom siedzącego trybu życia.</p>
+                        <p>WazzApp-egz to inicjatywa edukacyjna wspierająca uczniów przygotowujących się do egzaminów
+                            zawodowych. Uczymy, jak uczyć się efektywnie i zdrowo – bez wypalenia, stresu i
+                            przeciążenia. Pokazujemy metody, które pomagają osiągać lepsze wyniki, dbając jednocześnie o
+                            psychiczne i fizyczne zdrowie. <br>Naszą misją jest nie tylko wspierać w nauce, ale też
+                            zapobiegać problemom, które często towarzyszą intensywnemu przygotowaniu do egzaminów:
+                            zmęczeniu, lękowi, spadkom motywacji i zdrowotnym skutkom siedzącego trybu życia.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container video-container">
+                <div class="card" style="display: flex; flex-direction: column; align-items: center;">
+                    <div class="card-content video-content">
+                        <h3>Zobacz nasz film!</h3>
+                        <div class="video-frame">
+                            <iframe width="914" height="514" src="https://www.youtube.com/embed/OCnKf05bit0" title="wazzApp - The movie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
