--- a/index.html
+++ b/index.html
@@ -1,95 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>wazzApp - teaches how to learn</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="images/fav.svg">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="images/fav.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-</head>
+      href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header id="header" class="show">
-        <div class="half">
-            <h1>WazzAPP-egz</h1>
-        </div>
-        <div class="half color">
-            <nav>
-                <a href="sites/healthy_learning.html">Zdrowa nauka</a>
-                <a href="sites/study_methods.html">Efektywne metody nauki</a>
-                <a href="sites/stress.html">Stres</a>
-            </nav>
-        </div>
+      <div class="half">
+        <h1>WazzAPP-egz</h1>
+      </div>
+      <div class="half color">
+        <nav>
+          <a href="sites/healthy_learning.html">Zdrowa nauka</a>
+          <a href="sites/study_methods.html">Efektywne metody nauki</a>
+          <a href="sites/stress.html">Stres</a>
+        </nav>
+      </div>
     </header>
     <main>
-        <section id="About">
-            <div class="card-container">
-                <div class="card">
-                    <img src="images/logo.png" alt="Coding">
-                    <div class="card-content">
-                        <h3>O nas</h3>
-                        <p>WazzApp-egz to inicjatywa edukacyjna wspierająca uczniów przygotowujących się do egzaminów
-                            zawodowych. Uczymy, jak uczyć się efektywnie i zdrowo – bez wypalenia, stresu i
-                            przeciążenia. Pokazujemy metody, które pomagają osiągać lepsze wyniki, dbając jednocześnie o
-                            psychiczne i fizyczne zdrowie. <br>Naszą misją jest nie tylko wspierać w nauce, ale też
-                            zapobiegać problemom, które często towarzyszą intensywnemu przygotowaniu do egzaminów:
-                            zmęczeniu, lękowi, spadkom motywacji i zdrowotnym skutkom siedzącego trybu życia.</p>
-                    </div>
-                </div>
+      <section id="About">
+        <div class="card-container">
+          <div class="card">
+            <img src="images/logo.png" alt="Coding" />
+            <div class="card-content">
+              <h3>O nas</h3>
+              <p>
+                WazzApp-egz to inicjatywa edukacyjna wspierająca uczniów
+                przygotowujących się do egzaminów zawodowych. Uczymy, jak uczyć
+                się efektywnie i zdrowo – bez wypalenia, stresu i przeciążenia.
+                Pokazujemy metody, które pomagają osiągać lepsze wyniki, dbając
+                jednocześnie o psychiczne i fizyczne zdrowie. <br />Naszą misją
+                jest nie tylko wspierać w nauce, ale też zapobiegać problemom,
+                które często towarzyszą intensywnemu przygotowaniu do egzaminów:
+                zmęczeniu, lękowi, spadkom motywacji i zdrowotnym skutkom
+                siedzącego trybu życia.
+              </p>
             </div>
-            <div class="card-container video-container">
-                <div class="card" style="display: flex; flex-direction: column; align-items: center;">
-                    <div class="card-content video-content">
-                        <h3>Zobacz nasz film!</h3>
-                        <div class="video-frame">
-                            <iframe width="914" height="514" src="https://www.youtube.com/embed/OCnKf05bit0" title="wazzApp - The movie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
+          </div>
+        </div>
+        <div class="card-container video-container">
+          <div
+            class="card"
+            style="display: flex; flex-direction: column; align-items: center"
+          >
+            <div class="card-content video-content">
+              <h3>Zobacz nasz film!</h3>
+              <div class="video-frame">
+                <iframe
+                  width="914"
+                  height="514"
+                  src="https://www.youtube.com/embed/OCnKf05bit0"
+                  title="wazzApp - The movie"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <div class="footerTop">
-            <div class="footerSection">
-                <img src="images/logo.svg" alt="logo" class="logo">
-
-            </div>
-            <div class="footerSection">
-                <a href="#About">O nas</a>
-                <a href="sites/healthy_learning.html">Zdrowa nauka</a>
-                <a href="sites/study_methods.html">Efektowne metody nauki</a>
-                <a href="sites/stress.html">Stres</a>
-            </div>
-            <div class="footerSection">
-                <a href="mailto:mail@gmail.com">mail@gmail.com</a>
-                <a href="tel:+48795316931">+48 123 456 789</a>
-            </div>
+      <div class="footerTop">
+        <div class="footerSection">
+          <img src="images/logo.svg" alt="logo" class="logo" />
         </div>
-        <a href="#">&copy;2025 wazzAPP-egz</a>
+        <div class="footerSection">
+          <a href="#About">O nas</a>
+          <a href="sites/healthy_learning.html">Zdrowa nauka</a>
+          <a href="sites/study_methods.html">Efektowne metody nauki</a>
+          <a href="sites/stress.html">Stres</a>
+        </div>
+        <div class="footerSection">
+          <a href="mailto:mail@gmail.com">mail@gmail.com</a>
+          <a href="tel:+48795316931">+48 123 456 789</a>
+        </div>
+      </div>
+      <a href="#">&copy;2025 wazzAPP-egz.site</a>
     </footer>
 
     <script>
-        let lastScrollY = window.scrollY;
-        const header = document.querySelector('header');
+      let lastScrollY = window.scrollY;
+      const header = document.querySelector("header");
 
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > lastScrollY) {
-                // Scrolling down
-                header.classList.add('hide');
-            } else {
-                // Scrolling up
-                header.classList.remove('hide');
-            }
-            lastScrollY = window.scrollY;
-        });
+      window.addEventListener("scroll", () => {
+        if (window.scrollY > lastScrollY) {
+          // Scrolling down
+          header.classList.add("hide");
+        } else {
+          // Scrolling up
+          header.classList.remove("hide");
+        }
+        lastScrollY = window.scrollY;
+      });
     </script>
-</body>
-
+  </body>
 </html>
